Bug 334070 - umbrello crashes on loading of xmi file
Summary: umbrello crashes on loading of xmi file
Status: RESOLVED FIXED
Alias: None
Product: umbrello
Classification: Applications
Component: general (other bugs)
Version First Reported In: 2.13.0
Platform: unspecified Linux
: NOR normal
Target Milestone: ---
Assignee: Joris Steyn
URL:
Keywords:
Depends on:
Blocks:
 
Reported: 2014-04-29 11:26 UTC by Ralf Habacker
Modified: 2014-04-30 19:54 UTC (History)
1 user (show)

See Also:
Latest Commit:
Version Fixed/Implemented In: 4.13.1
Sentry Crash Report:


Attachments

Note You need to log in before you can comment on or make changes to this bug.
Description Ralf Habacker 2014-04-29 11:26:13 UTC
umbrello crashes on loading of the xmi file behind this link
https://projects.kde.org/projects/kde/kdesdk/umbrello/repository/revisions/a00cc1f3177b7d38057a74dfa89936dd5f380ac0/raw/models/diagrams/activity/all-elements.xmi

Reproducible: Always

Steps to Reproduce:
1. start umbrello
2. load mentioned xmi file

Actual Results:  
umbrello crashes

Expected Results:  
umbrello should load the mentioned file without a crash
Comment 1 Joris Steyn 2014-04-30 19:53:49 UTC
Git commit ecc6fd8bda67fbb37237d57890c000cbd3d16640 by Joris Steyn.
Committed on 30/04/2014 at 17:41.
Pushed by jorissteyn into branch 'KDE/4.13'.

Fix crash loading XMI with pinwidget
FIXED-IN: 4.13.1

M  +1    -1    umbrello/widgets/pinwidget.cpp

http://commits.kde.org/umbrello/ecc6fd8bda67fbb37237d57890c000cbd3d16640
Comment 2 Joris Steyn 2014-04-30 19:54:15 UTC
Git commit 0ea6b4fb22093d84611c218179abdc7294dd0d32 by Joris Steyn.
Committed on 30/04/2014 at 17:41.
Pushed by jorissteyn into branch 'master'.

Fix crash loading XMI with pinwidget
FIXED-IN: 4.13.1

M  +1    -1    umbrello/widgets/pinwidget.cpp

http://commits.kde.org/umbrello/0ea6b4fb22093d84611c218179abdc7294dd0d32