Fix crash loading XMI with pinwidget

BUG: 334070
FIXED-IN: 4.13.1